# QtLibraryExample

./: README.md
LibraryCreation/: CMakeLists.txt  ObjectDetection.cpp  main.cpp
LibraryUsage/: CMakeLists.txt  TestClass.cpp  TestClass.h  main.cpp
LibraryUsage/lib/: ObjectDetection.h
